[gd_scene load_steps=5 format=3 uid="uid://cfbwfa6t0e240"]

[ext_resource type="Script" path="res://scripts/phantom.gd" id="1_obxnw"]
[ext_resource type="Texture2D" uid="uid://q2fbdyrae0iv" path="res://Assets/graphics/new_phantom_2.png" id="2_nj8me"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y744p"]
radius = 17.1665
height = 34.3331

[sub_resource type="CircleShape2D" id="CircleShape2D_s3xqj"]
radius = 13.3333

[node name="Phantom" type="CharacterBody2D"]
scale = Vector2(0.3, 0.3)
collision_layer = 3
script = ExtResource("1_obxnw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.19209e-07, 0)
rotation = 1.5708
texture = ExtResource("2_nj8me")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.33333, 2.98023e-08)
shape = SubResource("CapsuleShape2D_y744p")

[node name="PhaseTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="LaserSpawn" type="Marker2D" parent="."]
position = Vector2(60, 0)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-10.0001, -1.66672)
scale = Vector2(113.667, 155.167)

[node name="bullet_area" type="Area2D" parent="."]
metadata/enemy1 = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet_area"]
position = Vector2(-3.33333, 0)
shape = SubResource("CircleShape2D_s3xqj")

[connection signal="timeout" from="PhaseTimer" to="." method="_on_phase_timer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="area_entered" from="bullet_area" to="." method="_on_bullet_area_area_entered"]
